# Copyright 2012 Christian Eder
# 
# This file is part of XMALLOC, licensed under the GNU General Public
# License version 3. See COPYING for more information.

SUBDIRS=src m4 tests doc

ACLOCAL_AMFLAGS=-I m4

bin_SCRIPTS=xmalloc-config

DISTCLEANFILES=_configs.sed

EXTRA_DIST=PROJECTS

DISTCLEANFILES= \
	xmalloc-config xmalloc-config~	\
	include/xmalloc-config.h*	\
	include/stamp-h1
